success create + web version run well

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
 <h2></h2>
 
 <a href="/web/item/all">table item</a>
-<a href="/api/item/all">row item</a>
+<a href="/api/item/get/all">row item</a>
 <a href="/web/subscriber/sublist">SUBSCRIBERS</a>
 <a href="/api/subscriber/sublist">row SUBSCRIBERS</a>
 
