--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,13 +5,13 @@
     <title>RENT</title>
 </head>
 <body>
-<h1> START </h1>
+<h1> Subscribers </h1>
 <h2></h2>
 
-<a href="/web/item/all">table item</a>
-<a href="/api/item/get/all">row item</a>
-<a href="/web/subscriber/sublist">SUBSCRIBERS</a>
-<a href="/api/subscriber/sublist">row SUBSCRIBERS</a>
+<a href="/web/item/all">table item</a><br/>
+<a href="/api/item/get/all">Json item</a><br/><br/>
+<a href="/web/subscriber/sublist">SUBSCRIBERS</a><br/>
+<a href="/api/subscriber/sublist">Json SUBSCRIBERS</a><br/>
 
 
 </body>
