--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,8 +10,8 @@
 
 <a href="/web/item/all">table item</a>
 <a href="/api/item/get/all">row item</a>
-<a href="/web/subscriber/sublist">SUBSCRIBERS</a>
-<a href="/api/subscriber/sublist">row SUBSCRIBERS</a>
+<a href="/web/subscriber/list">SUBSCRIBERS</a>
+<a href="/api/subscriber/list">row SUBSCRIBERS</a>
 
 
 </body>
