need to be fixed

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,8 +8,8 @@
 <h1> START </h1>
 <h2></h2>
 
-<a href="/web/item/all">table item</a>
-<a href="/api/item/get/all">row item</a>
+<a href="/web/item/list">table item</a>
+<a href="/api/item/get/list">row item</a>
 <a href="/web/subscriber/list">SUBSCRIBERS</a>
 <a href="/api/subscriber/list">row SUBSCRIBERS</a>
 
