--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,9 +8,14 @@
 <h1> START </h1>
 <h2></h2>
 
-<a href="/web/item/list">table item</a>
-<a href="/api/item/get/list">row item</a>
-<a href="/web/subscriber/list">SUBSCRIBERS</a>
+<a href="/web/item/list">table ITEM</a>
+<br/>
+
+<a href="/api/item/get/list">row item</a><br/>
+<br/>
+<br/>
+<br/>
+<a href="/web/subscriber/list">table SUBSCRIBERS</a><br/>
 <a href="/api/subscriber/list">row SUBSCRIBERS</a>
 
 
