--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
 <a href="/web/item/list">table ITEM</a>
 <br/>
 
-<a href="/api/item/get/list">row item</a><br/>
+<a href="/api/item/list">row item</a><br/>
 <br/>
 <br/>
 <br/>
